--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "basic app using react.js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start-server": "live-server public",
+    "start-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch"
   },
   "repository": {
     "type": "git",
