--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start-server": "live-server public",
-    "start": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch"
+    "start": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch",
+    "start-counter": "babel extras/counter.js --out-file=public/scripts/app.js --presets=env,react --watch"
   },
   "repository": {
     "type": "git",
