setting up webpack with babel

--- a/package.json
+++ b/package.json
@@ -20,8 +20,13 @@
   },
   "homepage": "https://github.com/HarshaKy/react-decision-app#readme",
   "dependencies": {
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
+    "@babel/core": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "babel-loader": "^8.1.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "validator": "^13.1.1",
     "webpack": "^4.43.0"
   },
   "devDependencies": {
