--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "basic app using react.js",
   "main": "index.js",
   "scripts": {
-    "start-server": "live-server public",
-    "build": "webpack --watch",
+    "serve": "live-server public",
+    "build": "webpack",
+    "dev-server": "webpack-dev-server",
     "babel-build": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch",
     "babel-build-counter": "babel extras/counter.js --out-file=public/scripts/app.js --presets=env,react --watch"
   },
@@ -27,7 +28,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "validator": "^13.1.1",
-    "webpack": "^4.43.0"
+    "webpack": "^4.43.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
