--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-modal": "^3.12.1",
     "validator": "^13.1.1",
     "webpack": "^4.43.0",
     "webpack-dev-server": "^3.11.0"
